非推奨ソースの修正