@@ -3,6 +3,7 @@ package jp.co.ysd.ysd_dao.dao;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Types;
@@ -30,7 +31,7 @@ import org.springframework.jdbc.support.KeyHolder;
 import org.springframework.stereotype.Component;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.PropertyNamingStrategy;
+import com.fasterxml.jackson.databind.PropertyNamingStrategies;
 import com.google.common.base.CaseFormat;
 
 import jp.co.ysd.ysd_dao.annotation.Snapshot;
@@ -53,7 +54,7 @@ public class PojoDao extends BasicDao {
 
 	private static final ObjectMapper SNAPSHOT_MAPPER = new ObjectMapper();
 	static {
-		SNAPSHOT_MAPPER.setPropertyNamingStrategy(PropertyNamingStrategy.SNAKE_CASE);
+		SNAPSHOT_MAPPER.setPropertyNamingStrategy(PropertyNamingStrategies.SNAKE_CASE);
 	}
 
 	private static PojoDaoStrategy strategy = new DefaultPojoDaoStrategy();
@@ -80,7 +81,7 @@ public class PojoDao extends BasicDao {
 
 		protected T getPojo(ResultSet rs) {
 			try {
-				T obj = clazz.newInstance();
+				T obj = clazz.getDeclaredConstructor().newInstance();
 				List<Field> fields = new ArrayList<>();
 				Class<?> i = clazz;
 				while (i != null && i != Object.class) {
@@ -111,7 +112,8 @@ public class PojoDao extends BasicDao {
 					}
 				}
 				return obj;
-			} catch (IOException | InstantiationException | IllegalAccessException e) {
+			} catch (IOException | InstantiationException | IllegalAccessException | IllegalArgumentException
+					| InvocationTargetException | NoSuchMethodException | SecurityException e) {
 				l.error("An error has occurred.", e);
 			}
 			return null;
@@ -255,7 +257,7 @@ public class PojoDao extends BasicDao {
 		return queryForSingle(nj, clazz, query, new MapBuilder("id", id).build());
 	}
 
-	private List<Long> boxingIds(long... ids) {
+	protected List<Long> boxingIds(long... ids) {
 		return Arrays.stream(ids).boxed().collect(Collectors.toList());
 	}
 
